# Weather_AQI_MCP

./: .env  1_weather_server.py  2_Air_Quality_Index_server.py  3_LLM_inference_server.py  AQI_LLM_client.py  AQI_mcp_LLM_server.py  AQI_mcp_server.py  Air-Quality-Index_server.py  LLM_inference_server.py  README.md  Weather-AQI MCP Assistant.ipynb  WeatherAQI MCP Assistant.ipynb  Weather_AQI_MCP_Assistant.ipynb  pyproject.toml  weatherAQI_MCP_Assistant.ipynb  weather_server.py
